--- a/Challenge_1/2_energy_estimation/energy_estimation.ipynb
+++ b/Challenge_1/2_energy_estimation/energy_estimation.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 277,
+      "execution_count": 307,
       "metadata": {
         "id": "L6Ld4fcohnkJ"
       },
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 278,
+      "execution_count": 308,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 279,
+      "execution_count": 309,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 280,
+      "execution_count": 310,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 281,
+      "execution_count": 311,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -193,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 282,
+      "execution_count": 312,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 283,
+      "execution_count": 313,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -300,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 284,
+      "execution_count": 314,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -329,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 285,
+      "execution_count": 315,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -369,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 286,
+      "execution_count": 316,
       "metadata": {},
       "outputs": [
         {
@@ -395,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 287,
+      "execution_count": 317,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -429,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 288,
+      "execution_count": 318,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -463,7 +463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 289,
+      "execution_count": 319,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -492,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 290,
+      "execution_count": 320,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -532,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 291,
+      "execution_count": 321,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -566,7 +566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 292,
+      "execution_count": 322,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -609,7 +609,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 293,
+      "execution_count": 323,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -644,7 +644,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 294,
+      "execution_count": 324,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -706,7 +706,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 295,
+      "execution_count": 325,
       "metadata": {},
       "outputs": [
         {
@@ -753,7 +753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 296,
+      "execution_count": 326,
       "metadata": {},
       "outputs": [
         {
@@ -796,7 +796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 297,
+      "execution_count": 327,
       "metadata": {},
       "outputs": [
         {
@@ -843,7 +843,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 302,
+      "execution_count": 328,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -865,7 +865,7 @@
             "transmission [2 dBm]:\t0.105 mJ\n",
             "\n",
             "Total energy consumption:  652.7140844639999 mJ\n",
-            "Total cycle time:  0.8250886 s\n"
+            "Total cycle time:  8.250886 s\n"
           ]
         }
       ],
@@ -892,7 +892,7 @@
         "totEnergy = sum([value*op_times[key] for key, value in powers.items()])/10e5\n",
         "print(\"\\nTotal energy consumption: \", totEnergy, \"mJ\")\n",
         "\n",
-        "totTime = sum([value for key, value in op_times.items()])/10e6\n",
+        "totTime = sum([value for key, value in op_times.items()])/10e5\n",
         "print(\"Total cycle time: \", totTime, \"s\")\n"
       ]
     },
@@ -907,7 +907,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 306,
+      "execution_count": 329,
       "metadata": {},
       "outputs": [
         {
@@ -915,7 +915,7 @@
           "output_type": "stream",
           "text": [
             "Battery cycles: 25973\n",
-            "Battery life: 5.95 h\n"
+            "Battery life: 59.53 h\n"
           ]
         }
       ],
