Added demonstration to optimal sink exercise

--- a/Challenge_1/4_optimal_sink/optimal_sink_exercise.ipynb
+++ b/Challenge_1/4_optimal_sink/optimal_sink_exercise.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 1,
       "metadata": {
         "id": "ogfyaDqOPe5z"
       },
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 3,
       "metadata": {
         "id": "k-1wKIZAPigc"
       },
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -195,7 +195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -228,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -241,13 +241,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "735.0  nJ\n"
+            "Total consumed energy: 735.0  nJ\n"
           ]
         }
       ],
       "source": [
         "TotEnergy= EnergyTxRxCircuitry + MaxTransmissionEnergy\n",
-        "print(TotEnergy,\" nJ\")"
+        "print(\"Total consumed energy:\", TotEnergy,\" nJ\")"
       ]
     },
     {
@@ -261,7 +261,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -300,12 +300,51 @@
         "id": "bm7vlJCjai9A"
       },
       "source": [
-        "To determine the optimal position of the sink while minimizing the total distance to all sensors, the sink should be positioned at the average x and y position of the nodes. This can be demonstrated to be correct using gradient analysis of the cost of each transmission"
+        "To determine the optimal position of the sink while minimizing the total distance to all sensors, the sink should be positioned at the average x and y position of the nodes. This can be demonstrated to be true using mathematical analysis: define the cost function as the sum of all transmission costs, derive in x and y parameters and find the value of each parameter where the derivatives are null.\n",
+        "\n",
+        "$$\n",
+        "S = \\sum_{i=1}^{10} E_{tx}(d) = \\sum_{i=1}^{10} k \\cdot d^2 = \\sum_{i=1}^{10} k \\cdot \\left( \\sqrt{(x_i - x)^2 + (y_i - y)^2} \\right)^2\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "S = \\sum_{i=1}^{10} E_{tx}(d) = \\sum_{i=1}^{10} k \\cdot d^2 = \\sum_{i=1}^{10} k \\cdot \\left( (x_i - x)^2 + (y_i - y)^2 \\right)\n",
+        "$$\n",
+        "\n",
+        "### **Partial Derivative with respect to x**  \n",
+        "To find the minimum, differentiate _S_ with respect to _x_:\n",
+        "\n",
+        "$$\n",
+        "\\frac{\\partial S}{\\partial x} = \\sum_{i=1}^{10} k \\cdot 2 (x - x_i)\n",
+        "$$\n",
+        "\n",
+        "Setting this derivative equal to zero:\n",
+        "\n",
+        "$$\n",
+        "\\sum_{i=1}^{10} k \\cdot 2 (x - x_i) = 0\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "\\sum_{i=1}^{10} (x_s - x_i) = 0\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "x_s = \\frac{1}{10} \\sum_{i=1}^{10} x_i\n",
+        "$$\n",
+        "\n",
+        "_S_ is the **arithmetic mean** of the values _xi_.\n",
+        "\n",
+        "Similarly can be done with the partial derivative wrt _y_, so it's possible to affirm that the point that minimizes the trasmission cost is simply the **arithmetic mean of the points**:\n",
+        "\n",
+        "$$\n",
+        "(x_s, y_s) = \\left( \\frac{1}{10} \\sum_{i=1}^{10} x_i, \\frac{1}{10} \\sum_{i=1}^{10} y_i \\right)\n",
+        "$$\n",
+        "\n",
+        "This means that the optimal transmission position is at the **average** location of all points\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -318,7 +357,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "(8.2, 6.8)\n"
+            "Optimal coordinates for the sink:  (8.2, 6.8)\n"
           ]
         }
       ],
@@ -335,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
