Added Challenge.pdf and Exercise.pdf

--- a/Challenge_1/4_optimal_sink/optimal_sink_exercise.ipynb
+++ b/Challenge_1/4_optimal_sink/optimal_sink_exercise.ipynb
@@ -407,6 +407,18 @@
         "plt.legend()\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Trade offs of a mobile sink\n",
+        "\n",
+        "A mobile sink forces sensors to adjust their transmission power dynamically, which can increase the energy consumption.\n",
+        "If the sink moves too far, some nodes may not reach the sink and will be forced to retransmit data, if reliabile communication protocols are used, otherwise the data will be lost.\n",
+        "\n",
+        "The position granting the lowest energy consumption is one and so it would not be useful in terms of energy consumes to implement a dynamical sink."
+      ]
     }
   ],
   "metadata": {
