--- a/Challenge_1/4_optimal_sink/optimal_sink_exercise.ipynb
+++ b/Challenge_1/4_optimal_sink/optimal_sink_exercise.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -28,7 +28,7 @@
         "packet = 2000               #bit\n",
         "k = 1                       #nJ/bit/m²\n",
         "\n",
-        "battery = 5*10e6            #nJ\n"
+        "battery = 5*10e5            #nJ\n"
       ]
     },
     {
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 48,
       "metadata": {
         "id": "k-1wKIZAPigc"
       },
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 52,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 53,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -245,8 +245,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Power cycles: 34.01\n",
-            "Lifetime: 340.14 minutes\n"
+            "Power cycles: 3.40\n",
+            "Lifetime: 34.01 minutes\n"
           ]
         }
       ],
@@ -280,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [
         {
@@ -328,7 +328,7 @@
         "# Compute max distance for each grid point\n",
         "for i in range(x.shape[0]):\n",
         "    for j in range(x.shape[1]):\n",
-        "        distances = np.sqrt((sensors[:, 0] - x[i, j])**2 + (sensors[:, 1] - y[i, j])**2)\n",
+        "        distances = np.sqrt((nodes[:, 0] - x[i, j])**2 + (nodes[:, 1] - y[i, j])**2)\n",
         "        z[i, j] = np.max(distances)  # Store the max distance\n",
         "        \n",
         "        # Update optimal position if a lower max distance is found\n",
@@ -340,7 +340,7 @@
         "plt.figure(figsize=(8, 6))\n",
         "contour = plt.contourf(x, y, z, levels=30, cmap='viridis')\n",
         "plt.colorbar(label=\"Max Distance\")\n",
-        "plt.scatter(sensors[:, 0], sensors[:, 1], color='cyan', marker='o', label=\"Nodes\")\n",
+        "plt.scatter(nodes[:, 0], nodes[:, 1], color='cyan', marker='o', label=\"Nodes\")\n",
         "plt.scatter(sink_p[0], sink_p[1], color='yellow', marker='X', s=100, label=\"Optimal Sink\")\n",
         "plt.xlabel(\"X Coordinate\")\n",
         "plt.ylabel(\"Y Coordinate\")\n",
