--- a/Challenge_1/4_optimal_sink/optimal_sink_exercise.ipynb
+++ b/Challenge_1/4_optimal_sink/optimal_sink_exercise.ipynb
@@ -352,6 +352,23 @@
         "\n",
         "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "vscode": {
+          "languageId": "markdown"
+        }
+      },
+      "source": [
+        "# Trade offs of a mobile sink\n",
+        "A mobile sink forces sensors to adjust their transmission power dynamically, which can increase\n",
+        "the energy consumption. If the sink moves too far, some nodes may not reach the sink and will\n",
+        "be forced to retransmit data, if reliabile communication protocols are used, otherwise the data\n",
+        "will be lost.\n",
+        "The position granting the lowest energy consumption is one and so it would not be useful in\n",
+        "terms of energy consumes to implement a dynamical sink."
+      ]
     }
   ],
   "metadata": {
