--- a/Challenge_2/Exercise.ipynb
+++ b/Challenge_2/Exercise.ipynb
@@ -15,7 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -55,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 105,
    "metadata": {
     "id": "pIPLO3o317G9"
    },
@@ -88,6 +95,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Vi2eaCc4_Q17"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "TI0nSdSx5IJx"
@@ -117,9 +133,7 @@
    "metadata": {
     "id": "o3OA2E9I6Dz9"
    },
-   "source": [
-    "### EQ1.a"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -127,6 +141,8 @@
     "id": "KNeZdTgt_f7s"
    },
    "source": [
+    "### EQ1.a\n",
+    "\n",
     "Since the aim is to implement the most energy-efficient configuration under the assumption of operating in a reliable network, it's possible to use Non-Confirmable messages for communication.\n",
     "It's also possible to use **Observer** mode in order to make the valve send a single Get Request to the sensor to let it know to send updates whenever they are available, that will be every 5 minutes in this specific case.\n",
     "\n",
@@ -136,8 +152,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "oNnCmQF6GIW6"
+   },
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 106,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -185,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 107,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -235,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 108,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -274,7 +297,7 @@
     "id": "MSgh2uUnId_P"
    },
    "source": [
-    "#### Answer: 128.93 mJ"
+    "#### Answer: 128.94 mJ"
    ]
   },
   {
@@ -283,7 +306,7 @@
     "id": "xwveEsBUqxJf"
    },
    "source": [
-    "# EQ 1.B"
+    "### EQ 1.B"
    ]
   },
   {
@@ -300,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 109,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -349,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 110,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -396,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 111,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -435,23 +458,122 @@
     "id": "72lKdtb4uvq_"
    },
    "source": [
-    "# EQ2"
+    "## Exercise Question 2 (EQ2)\n",
+    "\n",
+    "Propose at least one solution for decreasing th energy consumption when passing using the Raspberry PI as a broker. Give a rough estimate of the energy saving that could be obtained with your solution: recompute the energy under your proposed configuration.\n",
+    "\n",
+    "### Alternative 1\n",
+    "\n",
+    "Reduce sensor's sampling rate in order to send less data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valve's energy consumption for A1 is 119.83422399999999 mJ\n",
+      "Sensor's energy consumption for A1 is 3.9602079999999997 mJ\n",
+      "Total energy saved for A1 is: 8.460288000000006 mJ\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1_sensorTXFrequence = 10 #minutes\n",
+    "a1_dailySensorTransmission = totalTime/a1_sensorTXFrequence\n",
+    "\n",
+    "a1_ReceiveDataFromTopicEnergy = EnergyRX*mqttPublish*a1_dailySensorTransmission   #Energy used to receive the message published by the sensor\n",
+    "a1_totValveEnergy = (ConnectionEnergy + SubscribeEnergy + a1_ReceiveDataFromTopicEnergy)*1e-6+EnergyToAverage\n",
+    "\n",
+    "print(\"Valve's energy consumption for A1 is\", a1_totValveEnergy, \"mJ\")\n",
+    "\n",
+    "a1_PublishOnTopicEnergy= EnergyTX*mqttPublish*a1_dailySensorTransmission\n",
+    "a1_totSensorEnergy = (ConnectionEnergy + a1_PublishOnTopicEnergy)*1e-6\n",
+    "\n",
+    "print(\"Sensor's energy consumption for A1 is\", a1_totSensorEnergy, \"mJ\")\n",
+    "\n",
+    "print(\"Total energy saved for A1 is:\", tot - (a1_totValveEnergy + a1_totSensorEnergy), \"mJ\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1- salvare sul raspeberry pi i dati inviati dal sensore e ogni mezz'ora inviarli alla valvola\n",
-    "\tNB: possibilità di mettere in deep sleep la valvola \n",
+    "## Alternative 2\n",
     "\n",
-    "2- 1 + computazione dei dati in locale nella raspberry pi\n",
-    "\tNB: valvola decide se aprirsi o chiudersi in base al risultato\n",
+    "Data sent from the sensor is collected by the broker, which receives it on a dedicated topi, and then sent in a single burst on valve's own topic every 30 minutes: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valve's energy consumption for A2 is 116.80523199999999 mJ\n",
+      "Sensor's energy consumption is 7.877008 mJ\n",
+      "Total energy saved for A2 is: 7.572479999999999 mJ\n"
+     ]
+    }
+   ],
+   "source": [
+    "a2_valveUpdateFrequence = 30 #minutes\n",
+    "a2_dailyValveUpdates = totalTime/a2_valveUpdateFrequence\n",
     "\n",
-    "3- 2+ valvola ha semplicemente una flag di attivazione su un topic dedicato, \n",
-    "\tNB: valvola riceve solo toggle, quindi comunicazione ogni x tempo.\n",
+    "a2_ReceiveDataFromTopicEnergy = EnergyRX*mqttPublish*a2_dailyValveUpdates      #Energy used to receive the message published by the sensor\n",
     "\n",
-    "4- ridurre la quantità di dati inviati dal sensore di temperatura -> pollingS\n"
+    "a2_totValveEnergy = (ConnectionEnergy + SubscribeEnergy + a2_ReceiveDataFromTopicEnergy)*1e-6+EnergyToAverage\n",
+    "\n",
+    "print(\"Valve's energy consumption for A2 is\", a2_totValveEnergy, \"mJ\")\n",
+    "print(\"Sensor's energy consumption is\", totSensorEnergy, \"mJ\")\n",
+    "\n",
+    "print(\"Total energy saved for A2 is:\", tot - (a2_totValveEnergy + totSensorEnergy), \"mJ\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Alternative 3\n",
+    "\n",
+    "Data sent from the sensor is collected by the broker on a dedicated topic, the broker computes the average of received data and sends the result to the valve every 30 minutes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valve's energy consumption for A3 is 1.605232 mJ\n",
+      "Sensor's energy consumption is 7.877008 mJ\n",
+      "Total energy saved for A2 is: 122.77247999999999 mJ\n"
+     ]
+    }
+   ],
+   "source": [
+    "a3_valveUpdateFrequence = 30 #minutes\n",
+    "a3_dailyValveUpdates = totalTime/a2_valveUpdateFrequence\n",
+    "\n",
+    "a3_ReceiveDataFromTopicEnergy = EnergyRX*mqttPublish*a3_dailyValveUpdates      #Energy used to receive the message published by the sensor\n",
+    "a3_EnergyToAverage = 0  #mJ                                                    #The average is now computed by the broker\n",
+    "\n",
+    "a3_totValveEnergy = (ConnectionEnergy + SubscribeEnergy + a3_ReceiveDataFromTopicEnergy)*1e-6+a3_EnergyToAverage\n",
+    "\n",
+    "print(\"Valve's energy consumption for A3 is\", a3_totValveEnergy, \"mJ\")\n",
+    "print(\"Sensor's energy consumption is\", totSensorEnergy, \"mJ\")\n",
+    "\n",
+    "print(\"Total energy saved for A2 is:\", tot - (a3_totValveEnergy + totSensorEnergy), \"mJ\")"
    ]
   }
  ],
