Fixed minor issues in the notebook

--- a/Challenge_2/Exercise.ipynb
+++ b/Challenge_2/Exercise.ipynb
@@ -503,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Alternative 2\n",
+    "### Alternative 2\n",
     "\n",
     "Data sent from the sensor is collected by the broker, which receives it on a dedicated topi, and then sent in a single burst on valve's own topic every 30 minutes: "
    ]
@@ -541,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Alternative 3\n",
+    "### Alternative 3\n",
     "\n",
     "Data sent from the sensor is collected by the broker on a dedicated topic, the broker computes the average of received data and sends the result to the valve every 30 minutes:"
    ]
