Last commit for challenge 2

--- a/Challenge_2/Report/Exercise.ipynb
+++ b/Challenge_2/Report/Exercise.ipynb
@@ -8,6 +8,9 @@
    "source": [
     "# Exercise\n",
     "\n",
+    "Abate Kevin: **10812892** <br>\n",
+    "Pigato Lorenzo (Team Leader): **10766953**\n",
+    "\n",
     "### Environment setup and variable definition\n",
     "\n",
     "The following payload sizes (considered with header size) will be used to compute the calculations"
@@ -15,14 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -57,12 +53,12 @@
     "import math\n",
     "from IPython.display import Image, display\n",
     "\n",
-    "display (Image(\"./Report/energy_costs.png\"))"
+    "display (Image(\"./energy_costs.png\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 14,
    "metadata": {
     "id": "pIPLO3o317G9"
    },
@@ -93,15 +89,6 @@
     "\n",
     "mqttPublish = 68 * 8 #bit"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "Vi2eaCc4_Q17"
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -160,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -208,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -258,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -323,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -372,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -419,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -469,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +465,8 @@
      "text": [
       "Valve's energy consumption for A1 is 119.83422399999999 mJ\n",
       "Sensor's energy consumption for A1 is 3.9602079999999997 mJ\n",
-      "Total energy saved for A1 is: 8.460288000000006 mJ\n"
+      "Total energy saved for A1 is: 8.460288000000006 mJ\n",
+      "Total energy consumed for A1 is: 123.79443199999999 mJ\n"
      ]
     }
    ],
@@ -496,7 +484,8 @@
     "\n",
     "print(\"Sensor's energy consumption for A1 is\", a1_totSensorEnergy, \"mJ\")\n",
     "\n",
-    "print(\"Total energy saved for A1 is:\", tot - (a1_totValveEnergy + a1_totSensorEnergy), \"mJ\")"
+    "print(\"Total energy saved for A1 is:\", tot - (a1_totValveEnergy + a1_totSensorEnergy), \"mJ\")\n",
+    "print(\"Total energy consumed for A1 is:\", a1_totValveEnergy + a1_totSensorEnergy, \"mJ\")"
    ]
   },
   {
@@ -510,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +508,8 @@
      "text": [
       "Valve's energy consumption for A2 is 116.80523199999999 mJ\n",
       "Sensor's energy consumption is 7.877008 mJ\n",
-      "Total energy saved for A2 is: 7.572479999999999 mJ\n"
+      "Total energy saved for A2 is: 7.572479999999999 mJ\n",
+      "Total energy consumed for A2 is: 124.68224 mJ\n"
      ]
     }
    ],
@@ -534,7 +524,8 @@
     "print(\"Valve's energy consumption for A2 is\", a2_totValveEnergy, \"mJ\")\n",
     "print(\"Sensor's energy consumption is\", totSensorEnergy, \"mJ\")\n",
     "\n",
-    "print(\"Total energy saved for A2 is:\", tot - (a2_totValveEnergy + totSensorEnergy), \"mJ\")"
+    "print(\"Total energy saved for A2 is:\", tot - (a2_totValveEnergy + totSensorEnergy), \"mJ\")\n",
+    "print(\"Total energy consumed for A2 is:\", a2_totValveEnergy + totSensorEnergy, \"mJ\")"
    ]
   },
   {
@@ -548,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +548,8 @@
      "text": [
       "Valve's energy consumption for A3 is 1.605232 mJ\n",
       "Sensor's energy consumption is 7.877008 mJ\n",
-      "Total energy saved for A2 is: 122.77247999999999 mJ\n"
+      "Total energy saved for A3 is: 122.77247999999999 mJ\n",
+      "Total energy consumed for A3 is: 9.482240000000001 mJ\n"
      ]
     }
    ],
@@ -573,7 +565,8 @@
     "print(\"Valve's energy consumption for A3 is\", a3_totValveEnergy, \"mJ\")\n",
     "print(\"Sensor's energy consumption is\", totSensorEnergy, \"mJ\")\n",
     "\n",
-    "print(\"Total energy saved for A2 is:\", tot - (a3_totValveEnergy + totSensorEnergy), \"mJ\")"
+    "print(\"Total energy saved for A3 is:\", tot - (a3_totValveEnergy + totSensorEnergy), \"mJ\")\n",
+    "print(\"Total energy consumed for A3 is:\", a3_totValveEnergy + totSensorEnergy, \"mJ\")"
    ]
   }
  ],
