--- a/Challenge_4/Exercise 2/Exercise2.ipynb
+++ b/Challenge_4/Exercise 2/Exercise2.ipynb
@@ -93,13 +93,13 @@
       "metadata": {
         "id": "MkosXNxKwx_K"
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## First question\n",
+        "## First Question\n",
         ">Compute the Probability Mass Function of the output rate of the ESP32 P(r = r_0), P(r = r_1), P(r = r_2), where r_0, r_1 and r_2 are the output rates when there are 0, 1 or more than 1 persons in the captured frame, respectively."
       ],
       "metadata": {
@@ -121,7 +121,7 @@
       "metadata": {
         "id": "r6hBjS08uKjq"
       },
-      "execution_count": 41,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -134,7 +134,7 @@
       "metadata": {
         "id": "c0Hra4AH03X7"
       },
-      "execution_count": 42,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -165,9 +165,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C-exqV_qu2r3",
-        "outputId": "99b249b1-eb46-4c9b-f230-5dbb09b1c10c"
+        "outputId": "0c317dbb-1a14-44c3-cb9c-b1ac5947adef"
       },
-      "execution_count": 43,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,37 +201,35 @@
         "\n",
         "packet_size_L = 128 # bytes\n",
         "\n",
-        "bytes_to_bits = 8\n",
-        "\n",
-        "superframe_time = 10 * 1e3 #ms"
+        "bytes_to_bits = 8\n"
       ],
       "metadata": {
         "id": "jSh4X6T9za3K"
       },
-      "execution_count": 44,
+      "execution_count": 50,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "Ts = (packet_size_L * bytes_to_bits)*1e3 / nominal_bit_rate_R\n",
-        "print(f\"\\nTs (slot time): {Ts:.6f} ms\")\n"
+        "print(f\"\\nTs (slot time): {Ts:.3f} ms\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XbN5ieI40Uu5",
-        "outputId": "59dc0248-516d-41cd-c1d7-5c92ab9694fd"
+        "outputId": "6eb322ff-11ca-4a4f-ef35-91e332648c8f"
       },
-      "execution_count": 45,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Ts (slot time): 4.096000 ms\n"
+            "Ts (slot time): 4.096 ms\n"
           ]
         }
       ]
@@ -248,9 +246,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fuMnCxiX1dj-",
-        "outputId": "10008812-d18d-4be8-c5c4-e2a5e7014a4b"
+        "outputId": "921814eb-f217-4e57-c933-7b2da95fc86b"
       },
-      "execution_count": 46,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,6 +256,32 @@
           "text": [
             "\n",
             "Expected output rate E[r]: 0.1309 KB/s per node\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "min_output_rate_bits_per_sec = r0 * 8 * 1000  # Convert KB/s to bits/s\n",
+        "BI = (packet_size_L * bytes_to_bits) / min_output_rate_bits_per_sec\n",
+        "BI_ms = BI * 1000  # Convert to ms\n",
+        "print(f\"BI (Beacon Interval): {BI:.2f} s = {BI_ms:.2f} ms\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cWmdar1BWwdX",
+        "outputId": "e6b743b9-faa6-4fe0-d137-9e95216f5119"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "BI (Beacon Interval): 1.28 s = 1280.00 ms\n"
           ]
         }
       ]
@@ -273,9 +297,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y-bbhWsx1mQ_",
-        "outputId": "d556e51e-f8b6-4dfe-88e8-c6cc680624f0"
+        "outputId": "9f6e1acb-2a12-4ebe-ac46-ac1ccef54083"
       },
-      "execution_count": 47,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,25 +313,26 @@
     {
       "cell_type": "code",
       "source": [
-        "worst_case_rate_per_node = 6 # KB every 10 seconds\n",
-        "total_worst_case_rate = num_camera_nodes * worst_case_rate_per_node\n",
-        "print(f\"\\nTotal worst-case rate for {num_camera_nodes} nodes: {total_worst_case_rate} KB every 10 seconds\")"
+        "worst_case_rate_per_node = r2  # 0.6 KB/s per node\n",
+        "packets_per_BI_per_node = math.ceil((worst_case_rate_per_node * BI * 1000) / packet_size_L)\n",
+        "Ncfp = num_camera_nodes * packets_per_BI_per_node\n",
+        "print(f\"\\nTotal worst-case packets per superframe: {Ncfp} packets\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6miaHgXj2CiN",
-        "outputId": "490c3b98-5023-4b0f-a987-c57476682aa2"
+        "outputId": "e075086d-e413-4077-a797-c02480a1de59"
       },
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Total worst-case rate for 3 nodes: 18 KB every 10 seconds\n"
+            "Total worst-case packets per superframe: 18 packets\n"
           ]
         }
       ]
@@ -315,27 +340,27 @@
     {
       "cell_type": "code",
       "source": [
-        "worst_case_pacekts_per_superframe = total_worst_case_rate / (packet_size_L / 1e3)\n",
-        "\n",
-        "Ncfp = math.floor(worst_case_pacekts_per_superframe) + 1\n",
-        "\n",
-        "print(f\"\\nTotal worst-case packets per superframe: {Ncfp} packets\")"
+        "# Calculate active and inactive times\n",
+        "active_time = (Ncfp + 1) * Ts  # +1 for beacon frame\n",
+        "inactive_time = BI_ms - active_time\n",
+        "print(f\"Tactive: {active_time:.3f} ms\")\n",
+        "print(f\"Tinactive: {inactive_time:.3f} ms\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "kS27DA2d2Wur",
-        "outputId": "faad2ce8-feed-427e-960f-e96fed18aa1f"
+        "id": "kRItEnBSageL",
+        "outputId": "809ed790-d998-4e34-9740-9ed61502d197"
       },
-      "execution_count": 48,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
-            "Total worst-case packets per superframe: 141 packets\n"
+            "Tactive: 77.824 ms\n",
+            "Tinactive: 1202.176 ms\n"
           ]
         }
       ]
@@ -344,32 +369,23 @@
       "cell_type": "code",
       "source": [
         "#The Ncfp solts plus the beacon slot * time slot\n",
-        "active_time = (Ncfp+1) * Ts\n",
-        "print(f\"\\nTotal active time: {active_time:.4f} ms\")\n",
-        "\n",
-        "inactive_time = superframe_time - active_time\n",
-        "print(f\"Total inactive time: {inactive_time:.4f} ms\")\n",
-        "\n",
-        "duty_cycle = (active_time / superframe_time) * 100\n",
-        "print(f\"Duty cycle: {duty_cycle:.4f} %\")"
+        "duty_cycle = (active_time / BI_ms) * 100\n",
+        "print(f\"Duty cycle: {duty_cycle:.2f}%\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QM-E7Hql3ujO",
-        "outputId": "b934dacf-e4ff-4e9f-ff9c-503ce9911e74"
+        "outputId": "74819ae3-0112-4535-c1e1-6d1c8cd4387f"
       },
-      "execution_count": 49,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
-            "Total active time: 581.6320 ms\n",
-            "Total inactive time: 9418.3680 ms\n",
-            "Duty cycle: 5.8163 %\n"
+            "Duty cycle: 6.08%\n"
           ]
         }
       ]
@@ -377,7 +393,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Third Exercise\n",
+        "### Third Question\n",
         ">How many additional cameras can be added to keep the duty cycle below 10%?"
       ],
       "metadata": {
@@ -387,26 +403,40 @@
     {
       "cell_type": "code",
       "source": [
-        "packets = worst_case_rate_per_node * 1000 / packet_size_L\n",
-        "\n",
-        "packets = math.floor(packets) + 1\n",
-        "\n",
-        "print(f\"Total packets: {packets}\")\n",
-        "\n",
-        "max_active_time = superframe_time * 0.1\n",
-        "\n",
-        "max_slots = max_active_time / Ts\n",
-        "\n",
-        "max_slots = math.floor(max_slots)\n",
-        "\n",
-        "print(f\"Maximum slots: {max_slots}\")"
+        "max_active_time = BI_ms * 0.1\n",
+        "print(f\"\\nMax active time for 10% duty cycle: {max_active_time:.3f} ms\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "bs1lEXf08HS0",
-        "outputId": "5177cd1a-caa5-45d7-f8e5-adae610e9bfe"
+        "id": "7-yIw6PPZEba",
+        "outputId": "41ed1415-5932-4916-d8f7-a8a8e20e2a6e"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Max active time for 10% duty cycle: 128.000 ms\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_slots = math.floor(max_active_time / Ts) - 1  # -1 for beacon frame\n",
+        "print(f\"Maximum available slots: {max_slots}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pSKuQIiuZITh",
+        "outputId": "fda6fd65-d8ee-4fe5-ce32-ac0782f5588c"
       },
       "execution_count": 60,
       "outputs": [
@@ -414,8 +444,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Total packets: 47\n",
-            "Maximum slots: 244\n"
+            "Maximum available slots: 30\n"
           ]
         }
       ]
@@ -423,18 +452,15 @@
     {
       "cell_type": "code",
       "source": [
-        "maximum_camera = max_slots / packets\n",
-        "\n",
-        "maximum_camera = math.floor(maximum_camera)\n",
-        "\n",
-        "print(f\"Maximum camera: {maximum_camera}\")"
+        "max_cameras = math.floor(max_slots / packets_per_BI_per_node)\n",
+        "print(f\"Maximum number of cameras: {max_cameras}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "d83yNph08viG",
-        "outputId": "59a122d2-d667-4b1e-bb37-b71dae091cba"
+        "id": "as2l5A3nZGkX",
+        "outputId": "002f252a-9f22-4295-af68-5fcf48698a89"
       },
       "execution_count": 61,
       "outputs": [
@@ -442,7 +468,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Maximum camera: 5\n"
+            "Maximum number of cameras: 5\n"
           ]
         }
       ]
@@ -450,22 +476,15 @@
     {
       "cell_type": "code",
       "source": [
-        "tot_slot_updated = maximum_camera * packets\n",
-        "\n",
-        "new_active_time = (tot_slot_updated+1) * Ts\n",
-        "\n",
-        "new_inactive_time = superframe_time - new_active_time\n",
-        "\n",
-        "new_duty_cycle = (new_active_time / superframe_time) * 100\n",
-        "\n",
-        "print(f\"New duty cycle: {new_duty_cycle:.4f} %\")"
+        "additional_cameras = max_cameras - num_camera_nodes\n",
+        "print(f\"Additional cameras that can be added: {additional_cameras}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "JM5SV9FN9_ST",
-        "outputId": "51fe1fe6-cc9e-4264-abcd-0de6be42d1bc"
+        "id": "9LAuOuMIZN5a",
+        "outputId": "f3f23cd7-da01-4682-8b74-f0fa6f362258"
       },
       "execution_count": 62,
       "outputs": [
@@ -473,62 +492,64 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "New duty cycle: 9.6666 %\n"
+            "Additional cameras that can be added: 2\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "We can conlude that the max number of cameras that we add is equal to 2.\n",
-        "Below we can notice the proof that with 3 cameras the dury cycle over the 10%."
-      ],
-      "metadata": {
-        "id": "JFn_r9Xz-9Up"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "cameras_over_the_boundaries = maximum_camera + 1\n",
-        "\n",
-        "tot_slot_updated_updated = cameras_over_the_boundaries * packets\n",
-        "\n",
-        "new_active_time = (tot_slot_updated_updated+1) * Ts\n",
-        "\n",
-        "new_inactive_time = superframe_time - new_active_time\n",
-        "\n",
-        "new_duty_cycle = (new_active_time / superframe_time) * 100\n",
-        "\n",
-        "print(f\"New duty cycle: {new_duty_cycle:.4f} %\")"
+        "new_total_cameras = num_camera_nodes + additional_cameras\n",
+        "new_total_packets = new_total_cameras * packets_per_BI_per_node\n",
+        "new_active_time = (new_total_packets + 1) * Ts  # +1 for beacon frame\n",
+        "new_duty_cycle = (new_active_time / BI_ms) * 100\n",
+        "print(f\"New duty cycle with {new_total_cameras} cameras: {new_duty_cycle:.2f}%\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "EJ8G7Yc1-7Sb",
-        "outputId": "f11c697d-9d1f-41ef-e55d-337e89506ef9"
+        "id": "TvtdcnLeZaht",
+        "outputId": "4212f823-81bb-4f3d-aaf0-e7717a07dfd9"
       },
-      "execution_count": 65,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "New duty cycle: 11.5917 %\n"
+            "New duty cycle with 5 cameras: 9.92%\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "> We can conclude that 2 is the correct response."
+        "verify_cameras = new_total_cameras + 1\n",
+        "verify_total_packets = verify_cameras * packets_per_BI_per_node\n",
+        "verify_active_time = (verify_total_packets + 1) * Ts  # +1 for beacon frame\n",
+        "verify_duty_cycle = (verify_active_time / BI_ms) * 100\n",
+        "print(f\"Duty cycle with {verify_cameras} cameras: {verify_duty_cycle:.2f}%\")\n"
       ],
       "metadata": {
-        "id": "HiSMn_BSAB5b"
-      }
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eTn3jjPpZfLT",
+        "outputId": "947de6bc-9ffc-4dbc-be36-4334f24c8a84"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Duty cycle with 6 cameras: 11.84%\n"
+          ]
+        }
+      ]
     }
   ]
 }
